--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ngx-swiper-wrapper": "^10.0.0",
     "owl.carousel": "^2.3.4",
     "primeicons": "^6.0.1",
-    "primeng": "^17.0.0-beta.1",
+    "primeng": "^17.18.2",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.5",
     "tslib": "^2.3.0",
